[gd_scene load_steps=7 format=3 uid="uid://qyrjutr0b5rg"]

[ext_resource type="Script" uid="uid://3kxokfot7jw8" path="res://cs/主场景/ui/HandDock.gd" id="1_handdock"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hand_panel"]
bg_color = Color(0.0705882, 0.0862745, 0.207843, 0.741176)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.356863, 0.568627, 0.901961, 0.737255)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.0705882, 0.0862745, 0.207843, 0.741176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.356863, 0.454902, 0.901961, 0.737255)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.121569, 0.156863, 0.301961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.34902, 0.439216, 0.8, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gold_button"]
bg_color = Color(0.25, 0.18, 0.07, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.65, 0.2, 0.6)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_light_button"]
bg_color = Color(0.18, 0.22, 0.28, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.65, 0.75, 0.85, 0.7)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3
shadow_offset = Vector2(1, 1)

[node name="HandDock" type="Panel"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -585.0
offset_top = -420.0
offset_right = 615.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hand_panel")
script = ExtResource("1_handdock")

[node name="RuneIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 15.0
offset_right = 25.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.529412, 0.678431, 0.913725, 0.258824)
theme_override_font_sizes/font_size = 36
text = "⚜"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HandTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 0.831373, 0.976471, 1)
theme_override_colors/font_shadow_color = Color(0.0470588, 0.0627451, 0.137255, 0.4)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 30
text = "✦ 符文掌控台 ✦"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuneDecoration1" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 120.0
offset_right = 120.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0.356863, 0.454902, 0.901961, 0.15)
theme_override_font_sizes/font_size = 72
text = "⚝"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuneDecoration2" type="Label" parent="."]
layout_mode = 0
offset_left = 1060.0
offset_top = 120.0
offset_right = 1100.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0.356863, 0.454902, 0.901961, 0.15)
theme_override_font_sizes/font_size = 72
text = "⚝"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuneDecoration3" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 200.0
offset_right = 240.0
offset_bottom = 278.0
theme_override_colors/font_color = Color(0.356863, 0.454902, 0.901961, 0.12)
theme_override_font_sizes/font_size = 56
text = "✧"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuneDecoration4" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 278.0
theme_override_colors/font_color = Color(0.356863, 0.454902, 0.901961, 0.12)
theme_override_font_sizes/font_size = 56
text = "✧"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
offset_right = -40.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="ButtonPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 70)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ButtonDivider" type="HSeparator" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_top = 3.0
offset_right = -30.0
offset_bottom = 5.0
grow_horizontal = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_button")

[node name="ButtonGrid" type="HBoxContainer" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 8.0
offset_right = -30.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="PlayButtonContainer" type="VBoxContainer" parent="ButtonPanel/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.3
alignment = 1

[node name="PlayButton" type="Button" parent="ButtonPanel/ButtonGrid/PlayButtonContainer"]
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 0.92, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.35, 0.25, 0.1, 0.5)
theme_override_colors/font_color = Color(1, 0.87, 0.55, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.8, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_gold_button")
text = "✦ 吟唱咒语 ✦"

[node name="SortButtonContainer" type="VBoxContainer" parent="ButtonPanel/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SortGrid" type="HBoxContainer" parent="ButtonPanel/ButtonGrid/SortButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SortValueButton" type="Button" parent="ButtonPanel/ButtonGrid/SortButtonContainer/SortGrid"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.356863, 0.454902, 0.901961, 0.3)
theme_override_colors/font_color = Color(0.866667, 0.933333, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "✧ 按能量排序 ✧"

[node name="SortSuitButton" type="Button" parent="ButtonPanel/ButtonGrid/SortButtonContainer/SortGrid"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.356863, 0.454902, 0.901961, 0.3)
theme_override_colors/font_color = Color(0.866667, 0.933333, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "✧ 按元素排序 ✧"

[node name="DiscardButtonContainer" type="VBoxContainer" parent="ButtonPanel/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.3
alignment = 1

[node name="DiscardButton" type="Button" parent="ButtonPanel/ButtonGrid/DiscardButtonContainer"]
custom_minimum_size = Vector2(240, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.25, 0.35, 0.45, 0.4)
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_light_button")
text = "✧ 使用精华 ✧"
